Fixes for buttons on safari / chrome / ff. Tweaks to showcase

--- a/src/static/styles/partials/components/_wf-btn.scss
+++ b/src/static/styles/partials/components/_wf-btn.scss
@@ -14,14 +14,8 @@
     width: $header-svg-icon-size;
     height: $header-svg-icon-size;
 
-    padding-top: (($base-line * 2) - $header-svg-icon-size) / 2;
-
     fill: $text-color-primary;
-  }
-}
 
-button.wf-btn__small {
-  svg {
-    padding-top: 0;
+    vertical-align: initial;
   }
 }
